--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -60,5 +60,5 @@ QcXncxqZbgslZiJAMOTy
 kMfkHMyIUTklnCAmVdBM
 ZtWLwMMBoDiXaXLWVTGx
 YPzNjpMHTgyeIWbzVuuE</string>
-
+    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://alburt.us\",\n  }\n}]</string>
 </resources>
