moving resources to web-sandbox json file

--- a/directory/src/main/res/values/strings.xml
+++ b/directory/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="view_more_in_our_app">View more in our app</string>
     <string name="profile_overview">Profile Overview</string>
     <string name="player_profile_title">Player Profile</string>
-    <string name="defaukt_baseball_logo">https://alburt.us/content/img/ny_logo.png</string>
+    <string name="default_baseball_logo">https://alburt.us/content/img/ny_logo.png</string>
     <string name="google_play_link">https://play.google.com/store/apps/details?id=com.wbmd.appindexingpoc</string>
     <string name="profile">profile</string>
     <string name="player_roster_title">Player Roster</string>
